# mpd-touch-screen-gui

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  cover_view.cpp  cover_view.hpp  font_atlas.cpp  font_atlas.hpp  gui.hpp  idle_timer.cpp  idle_timer.hpp  keypad.cpp  main.cpp  mpd-touch-screen-gui.conf  mpd_control.cpp  mpd_control.hpp  program_config.cpp  program_config.hpp  sdl_util.cpp  sdl_util.hpp  search_view.cpp  search_view.hpp  song_list_view.cpp  timed_thread.cpp  timed_thread.hpp  user_event.cpp  user_event.hpp  util.cpp  util.hpp
.reuse/: dep5
data/: Makefile.am  client.conf  mpd-touch-screen-gui.conf  program.conf
data/icons/: Makefile.am  README.md  jump_to_arrow.png.license
example-images/: cover-swipe-text.png.license
m4/: .gitignore  ax_boost_asio.m4  ax_boost_base.m4  ax_boost_filesystem.m4  ax_boost_system.m4  ax_pthread.m4
src/: .gitignore  Makefile.am  byte_buffer.cpp  byte_buffer.hpp  client.cpp  config_file.cpp  config_file.hpp  cover_provider.hpp  cover_updatable.hpp  cover_view.cpp  cover_view.hpp  dynamic_image_data.cpp  dynamic_image_data.hpp  enum_texture_button.hpp  event_loop.cpp  event_loop.hpp  filesystem_cover_provider.cpp  filesystem_cover_provider.hpp  idle_timer.cpp  idle_timer.hpp  keypad.cpp  keypad.hpp  list_view_controls.cpp  list_view_controls.hpp  main.cpp  mpd_control.cpp  mpd_control.hpp  mpd_cover_provider.cpp  mpd_cover_provider.hpp  navigation_event.cpp  navigation_event.hpp  player_gui.cpp  player_gui.hpp  player_model.hpp  player_mpd_model.cpp  player_mpd_model.hpp  player_view.hpp  program_config.cpp  program_config.hpp  quit_action.hpp  (+17 more)
